Recent changes
-181    Fixed bug where external restraints produced "illegal instruction" error
        in SHELXL. AFIX 9 and +dfixfile is now recognized by a unique id.
        External restraints with a rigid group produced an invalid RESI None None 
        instruction.
-180    Moving version format to integer. Final export format for the ShelXle GUI. 
        Faster start in Windows. Many small fixes. Improved error messages.
        In replace mode, really delete lines instead of producing blank lines. 
        User manual updates.
-1.7.7  New output format for DSRGui. New command line option for rigid group.
-1.7.6  Huge improvement in SADI consistency checker. Some new fragments NBt4+ 
        NMe4+ C20. Small fixes.
-1.7.5  Also move fluorine atoms in direction of principal ellipsoid axis with 
        SPLIT option and CF6.
-1.7.4  Added check if SADI atom pair distances are consistent with each other. 
        Added Anthracene and 9,10-Dibromoanthracene.
        Better formating of DFIX/DANG list with dfix option turned on.
        Fixed bug with occ=0.25
        Addedd C60 (with restraints) and C70 (without restraints, use dfix option).
        Some more unit tests.
-1.7.3  Small fix regarding FVAR with CF6 fragment. 
-1.7.2  Added [2.2.2]-cryptand to database. Tanks to Dejan Premuzic! Added Ability 
        to compute principal axes vectors of an ellipsoid. Added "split" option 
        to split CF6 group. Several other fixes.
-1.7.1-1 Fixed missing cf3fit.py in Windows installer.
-1.7.1  Fixed typos in CF3 restraints. Improved residue handling with CF3 groups.
        Known bugs: res files without FVAR (e.g. after shelxs or shelxt) cause a 
        crash.
-1.7.0  New feature: Ability to model disordered CF3 groups (1, 2 and 3 positions). 
        Fixed CF6 restraints.
-1.6.4  removed dependency of DFIX and PART in DSR, better warning for unsuccessful 
        shelxl runs.
-1.6.3  Improved FLAT restraints. Fixed Pyridine and Acetonitrile restraints. 